apply plugin: 'com.android.library'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-android-extensions'

apply plugin: 'com.github.dcendents.android-maven'
group='com.github.lixiong'

android {
    compileSdkVersion 30
    defaultConfig {
        minSdkVersion 19
        targetSdkVersion 30
    }
    buildFeatures{
        //noinspection DataBindingWithoutKapt
        dataBinding = true
    }
    buildTypes {

        debug {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }

        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    compileOnly fileTree(dir: "libs", include: ["*.jar","*.aar"])
    //support
    compileOnly rootProject.ext.support["support-v4"]
    compileOnly rootProject.ext.support["appcompat-v7"]
    compileOnly rootProject.ext.support["recyclerview-v7"]
    //rxjava
    api rootProject.ext.dependencies.rxjava
    api rootProject.ext.dependencies.rxandroid
    //rx管理View的生命周期
    api(rootProject.ext.dependencies.rxlifecycle) {
        exclude group: 'com.android.support'
    }
    api(rootProject.ext.dependencies["rxlifecycle-components"]) {
        exclude group: 'com.android.support'
    }
    //rxbinding
    api(rootProject.ext.dependencies.rxbinding) {
        exclude group: 'com.android.support'
    }
    //rx权限请求
     /*implementation(rootProject.ext.dependencies.rxpermissions) {
         exclude group: 'com.android.support'
     }*/
    //network
    api rootProject.ext.dependencies.okhttp
    api rootProject.ext.dependencies.retrofit
    api rootProject.ext.dependencies["converter-gson"]
    api rootProject.ext.dependencies["adapter-rxjava"]
    //json解析
    api rootProject.ext.dependencies.gson
    //material-dialogs
    implementation(rootProject.ext.dependencies["material-dialogs-core"]) {
        exclude group: 'com.android.support'
    }
    implementation(rootProject.ext.dependencies["material-dialogs-commons"]) {
        exclude group: 'com.android.support'
    }
    //glide图片加载库
    api (rootProject.ext.dependencies.glide){
        exclude group: 'com.android.support'
    }
    compileOnly 'androidx.constraintlayout:constraintlayout:2.1.4'
    annotationProcessor rootProject.ext.dependencies["glide-compiler"]
    //recyclerview的databinding套装
    api(rootProject.ext.dependencies.bindingcollectionadapter) {
        exclude group: 'com.android.support'
    }
    api(rootProject.ext.dependencies["bindingcollectionadapter-recyclerview"]) {
        exclude group: 'com.android.support'
    }
    //Google LiveData和ViewModel组件
    api rootProject.ext.dependencies["lifecycle-extensions"]
    annotationProcessor rootProject.ext.dependencies["lifecycle-compiler"]
//    api rootProject.ext.dependencies["XUpdate"]
    implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
    implementation 'com.github.mamumu:mmDialog:1.2.0'
    api rootProject.ext.dependencies["smartrefresh"]
    api 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10'
    implementation 'org.greenrobot:eventbus:3.2.0'
    implementation 'me.jessyan:autosize:1.2.1'
//    api 'com.yanzhenjie:album:2.1.3'
//    compileOnly 'com.drawthink:expandable-recyclerview:0.0.3'
    compileOnly 'com.github.zcweng:switch-button:0.0.3@aar'
    compileOnly 'com.yanzhenjie:album:2.1.3'
    api 'com.bytedance.boost_multidex:boost_multidex:1.0.1'
    api 'com.github.xiaohaibin:XBanner:1.7.9'
    implementation 'com.blankj:swipe-panel:1.2'
//    api 'com.blankj:utilcodex:1.31.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
    api 'com.tencent:mmkv-static:1.2.16'
//    implementation 'com.github.getActivity:Toaster:13.6'
    api 'org.apache.commons:commons-lang3:3.6'
    api 'com.github.lepiejh:android-dialog:v1.2.23'
    api 'com.github.lepiejh:android-tcp:v1.3.37'
    api 'com.github.lepiejh:android-tablayout:v1.3.33'
    implementation 'com.github.lepiejh:android-play:v1.0.8'
    implementation 'com.github.lepiejh:android-update:v1.0.1'
    implementation 'com.github.lepiejh:html:v1.1.0'
    api 'com.github.lepiejh:android-chat:v1.0.2'
    implementation 'com.github.lepiejh:android-recycleview:v1.0.1'
    implementation 'com.github.lepiejh:calendarview:v1.0.0'
    api 'com.github.lepiejh:rxpermissions:v1.0.2'
//    api 'com.amplitude:android-sdk:2.23.2'
    api 'me.jessyan:retrofit-url-manager:1.4.0'
    api 'com.github.lepiejh:arc:v1.2.36'
    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.3"
    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3"
//    api "androidx.viewpager2:viewpager2:1.0.0"
    api "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
    api 'androidx.fragment:fragment-ktx:1.4.1'
}